# user-service/docs/swagger.json
@@ -101,6 +101,44 @@
                 }
             }
         },
+        "/get-services": {
+            "get": {
+                "description": "이용하고 싶은 서비스 목록 조회시 호출",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "전체 서비스 목록 조회 (공통)  /user"
+                ],
+                "summary": "전체 서비스 목록 조회",
+                "responses": {
+                    "200": {
+                        "description": "성공시 유저 객체 반환/ ture:남성",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.MainServiceResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "요청 처리 실패시 오류 메시지 반환",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "요청 처리 실패시 오류 메시지 반환",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/get-user": {
             "post": {
                 "description": "내 정보 조회시 호출",
@@ -308,6 +346,17 @@
                 }
             }
         },
+        "dto.ImageResponse": {
+            "type": "object",
+            "properties": {
+                "thumbnail_url": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.LoginRequest": {
             "type": "object",
             "properties": {
@@ -316,6 +365,17 @@
                 },
                 "user": {
                     "$ref": "#/definitions/dto.UserRequest"
+                }
+            }
+        },
+        "dto.MainServiceResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         },
@@ -354,8 +414,18 @@
                     "type": "string",
                     "example": "01000000000"
                 },
+                "profile_image": {
+                    "type": "string",
+                    "example": "base64 encoding string"
+                },
                 "use_auto_login": {
                     "type": "boolean"
+                },
+                "use_services": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "use_sleep_tracking": {
                     "type": "boolean"
@@ -364,7 +434,8 @@
                     "type": "boolean"
                 },
                 "user_type": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "0:해당없음 1:파킨슨 환자 2:보호자"
                 }
             }
         },
@@ -402,12 +473,21 @@
                     "type": "string",
                     "example": "01000000000"
                 },
+                "profile_image": {
+                    "$ref": "#/definitions/dto.ImageResponse"
+                },
                 "updated": {
                     "type": "string",
                     "example": "YYYY-mm-ddTHH:mm:ssZ (ISO8601) "
                 },
                 "use_auto_login": {
                     "type": "boolean"
+                },
+                "use_services": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.MainServiceResponse"
+                    }
                 },
                 "use_sleep_tracking": {
                     "type": "boolean"
@@ -416,7 +496,8 @@
                     "type": "boolean"
                 },
                 "user_type": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "0:해당없음 1:파킨슨 환자 2:보호자"
                 }
             }
         }
